--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-parallax-tilt": "^1.7.291",
     "react-resizable-panels": "^2.1.3",
