--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -59,6 +60,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "number-to-words": "^1.2.4",
+    "papaparse": "^5.5.3",
     "pg": "^8.14.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
