--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.7.4",
     "html2pdf.js": "^0.10.3",
     "input-otp": "^1.2.4",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.462.0",
@@ -77,6 +78,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
